# website

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .vale.ini  .woodpecker.yaml  Makefile  README.md  dev-requirements.txt  footer.rst  header.html  package-lock.json  package.json  pelicanconf.py  planet.opml  publishconf.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tasks.py
.github/workflows/: publish.yml
content/: 2020-04-09-buying-a-new-phone.md  2020-04-09-juggling-roles.md  2020-05-23-open-access-peer-review.rst  2020-06-24-power-to-the-usercss.md  2020-08-09-localization-digitization.rst  2020-11-19-wondering-the-bayesian-math-of-covid-19-vaccine.rst  2021-05-16-ternary-operator-in-python.md  2021-08-30-domain-name.md  2021-09-23-global-climate-strike-sept-2021.rst  2021-12-19-testing-comments-on-fediverse.md  2021-12-20-testing-blog-and-toot-commands-in-tandem.rst  2022-11-04-pyconse2022.md  indieweb-webmentions-test.md  lang-digital.md  licensing-software.md  light-at-the-end.md  pyconse2019.md  repl-social-media.md
content/bookmarks/: email-services.md  github-ashwinvis-ashwinvis-micropub.md  micropub-indieweb-https-indieweb-org.md  the-carpentries-instructor-training.md
content/converted/: python_interpreters.rst
content/extra/: bibbase.js
content/pages/: 404.md  contact.rst  cv.rst  index.rst  research.rst  software.rst  sponsors.rst
content/static/: resume.html
content/tumblr/: 2015-04-06-tmesis.md
requirements/: dev.in  dev.txt  main.in  main.txt
src/pelican_ashwinvis/: __init__.py  pelican-install
src/pelican_ashwinvis/pelican_bibtex/: __init__.py  pelican_bibtex.py
src/pelican_ashwinvis/post_stats/: __init__.py  post_stats.py
src/pelican_ashwinvis/representative_image/: Readme.md  representative_image.py
src/pelican_ashwinvis/util/: get_source_css.py  get_webmentions.py  lint.py  util.py  write.py
templates/: header.html  planet.rst.j2  post.ipynb.j2  post.md.j2  post.rst.j2
