[build-system]
requires = [
    "setuptools>=49.5.0",
    "wheel",
    "setuptools_scm[toml]>=7.0.0",
    ]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "I"]
ignore = ["F405"]
